added turnstile example, simplified python code
Python combined to a single file fsm.py
Added new feature to decide exactly what transitions are allowed so
that there are no more functions than needed (functions are replaced in
state transition matrix with a NULL pointer).
Added extremely simple turnstile example.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ Thumbs.db
 
 # Python compiled code #
 *.pyc
+__pychache__
 
 # generated code from example #
 example/fsm_example
+
+# PyCharm files
+.idea
