Update to use heap instead of stack+C99
'create' and 'free' functions are added for the state machine container and the C99 macro was removed.
Added Makefile and CMakeLists.txt for example turnstile

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ Thumbs.db
 
 # Python compiled code #
 *.pyc
-__pychache__
+__pycache__
 
 # generated code from example #
 example/fsm_example/
@@ -52,3 +52,10 @@ example/turnstile_example/
 
 # Sublime Text
 *.sublime-workspace
+
+# virtual environment
+.venv/
+venv/
+
+# build directory
+**/build/
